recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:1: error: type mismatch;
 found   : Unit
 required: List[Int]
def butLast(l:List[Int]): List[Int] = {
                                      ^